Fix: Prevent long usernames from overflowing sidebar

--- a/src/app/components/main-page/main-nav/main-nav.component.scss
+++ b/src/app/components/main-page/main-nav/main-nav.component.scss
@@ -60,6 +60,11 @@
           padding-right: 10px;
         }
 
+        &#account {
+          .email {
+            word-break: break-all;
+          }
+        }
       }
     }
   }
